refactor: Identity API Clean Architecture & Repository Pattern and Service Layer workflow 39
